# MDM-II

./: .gitignore  CMakeLists.txt  README.md  reference.txt
example/Direct3D9/: Direct3D9.dsp  Direct3D9.dsw  Main.cpp  Main.h  Window.cpp
example/OpenGL/: MathTest.dev  MathTest.layout
example/OpenGL/glsl/: fragment.txt  vertex.txt
example/OpenGL/src/: Graphics_GL.cpp  Main.cpp  Main.h  Shader_GL.cpp  Window.cpp
include/: constants.h  mdm.h
src/: CMakeLists.txt  Common.cpp  General.cpp  Matrix.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  Transform.cpp  Vector.cpp
test/test1/: CMakeLists.txt  main.cpp
test/test2/: CMakeLists.txt  main.cpp
test/test3/: CMakeLists.txt  main.cpp
test/test4/: CMakeLists.txt  main.cpp
